# $Id: CHANGELOG 776 2008-12-7 01:30:27Z dane $

----------------
Mapnik Changelog
----------------
 
A simple log of core changes affecting Mapnik usage.

Developers: Please commit along with changes.

For a complete change history, see the SVN log.



Mapnik 0.7.1 Release
--------------------

- SCons: Added new build options 'PRIORITIZE_LINKING' and 'LINK_PRIORITY'. The first is a boolean (default True)
  of whether to use the new sorting implementation that gives explcit preference to custom or local paths
  during compile and linking that will affect builds when duplicate libraries and include directories are on the
  system. LINK_PRIORITY defaults to prioritizing internal sources of the mapnik source folder, then local/user 
  installed libraries over system libraries, but the option can be customized. Sorting not only ensures that 
  compiling and linking will more likely match the desired libraries but also gives more likelyhood to avoid 
  the scenario where libraries are linked that don't match the includes libmapnik compiled against.

- XML: Fixed behavior of PolygonPatternSymbolizer and LinePatternSymbolizer whereby width, height,
  and type of images is actually allowed to be optionally ommitted (#508). This was added in r1543 but
  only worked correctly for PointSymbolizer and ShieldSymbolizer. 

- Fixed reading of PostGIS data on Big Endian systems (#515)

- PostGIS: Added better support for alterative schemas (#500)

- AGG Renderer - Enforced default gamma function on all symbolizers to ensure proper antialiasing
  even when gamma is modified on the PolygonSymbolizer. (#512)

- PNG: fixed png256 for large images and some improvements to reduce color corruptions (#522)


Mapnik 0.7.0 Release
--------------------

(Packaged from r1574)

- Core: Fixed linking to external libagg (r1297,r1299)

- Core: Completed full support for PPC (Big endian) architectures (r1352 -> r1357)
